--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ description = "A suite of bioinformatics tools for interacting with high through
 
 [dependencies]
 bio = "0.30.0"
+fastq = "0.6.0"
 
 [dependencies.clap]
 version = "2"
