--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license = "MIT"
 repository = "https://github.com/jrhawley/bio-jtools-rs/"
 homepage = "https://github.com/jrhawley/bio-jtools-rs/"
 readme = "README.md"
-categories = ["bioinformatics"]
+categories = ["command-line-utilities", "science"]
 
 [dependencies]
 bio = "0.30.0"
