--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ categories = ["command-line-utilities", "science"]
 [dependencies]
 bio = "0.30.0"
 fastq = "0.6.0"
+chrono = "0.4"
+regex = "1"
 
 [dependencies.clap]
 version = "2"
