--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ categories = ["command-line-utilities", "science"]
 
 [dependencies]
 bio = "0.30.0"
-fastq = "0.6.0"
+needletail = "0.3.2"
 
 [dependencies.clap]
 version = "2"
