--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ categories = ["command-line-utilities", "science"]
 [dependencies]
 bio = "0.30.0"
 needletail = "0.3.2"
+rust-lapper = "0.4.4"
 
 [dependencies.clap]
 version = "2"
