--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ rust-lapper = "0.4.4"
 chrono = "0.4.11"
 regex = "1.3.9"
 walkdir = "2.3.1"
+prettytable-rs = "0.8.0"
 
 [dependencies.clap]
 version = "2"
