--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ chrono = "0.4.11"
 regex = "1.3.9"
 walkdir = "2.3.1"
 prettytable-rs = "0.8.0"
+itertools = "0.9"
 
 [dependencies.clap]
 version = "2"
