--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ regex = "1.3.9"
 walkdir = "2.3.1"
 prettytable-rs = "0.8.0"
 itertools = "0.9"
+indoc = "0.3"
 
 [dependencies.clap]
 version = "2"
