--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ walkdir = "2.3.1"
 prettytable-rs = "0.8.0"
 itertools = "0.9"
 indoc = "0.3"
+rust-htslib = {path = "../rust-htslib"}
 
 [dependencies.clap]
 version = "2"
