--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,7 @@ include = [
 ]
 
 [dependencies]
-bio = "0.30.0"
-needletail = "0.3.2"
+needletail = { version = "0.4", features = ["compression"] }
 rust-lapper = "0.4.4"
 chrono = "0.4.11"
 regex = "1.3.9"
