--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,16 +2,11 @@
 
 name: Continuous Deployment
 
-# Controls when the action will run. 
+# Controls when the action will run.
 on:
   push:
     tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+'
-
-
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+      - "v[0-9]+.[0-9]+.[0-9]+"
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -60,8 +55,10 @@ jobs:
           toolchain: ${{ matrix.rust }}
           profile: minimal
           override: true
+
       - name: Checkout repository
         uses: actions/checkout@v2
+
       - name: Cargo build
         uses: actions-rs/cargo@v1
         with:
@@ -77,12 +74,13 @@ jobs:
               sudo apt update
               sudo apt-get install -y binutils-aarch64-linux-gnu
           fi
+
       - name: Packaging final binary
         shell: bash
         run: |
           cd target/${{ matrix.job.target }}/release
           ####### reduce binary size by removing debug symbols #######
-          BINARY_NAME=rust-gh-example${{ matrix.job.binary-postfix }}
+          BINARY_NAME=bjt${{ matrix.job.binary-postfix }}
           if [[ ${{ matrix.job.target }} == aarch64-unknown-linux-gnu ]]; then
             GCC_PREFIX="aarch64-linux-gnu-"
           else
@@ -90,7 +88,7 @@ jobs:
           fi
           "$GCC_PREFIX"strip $BINARY_NAME
           ########## create tar.gz ##########
-          RELEASE_NAME=rust-gh-example-${GITHUB_REF/refs\/tags\//}-${{ matrix.job.os-name }}-${{ matrix.job.architecture }}
+          RELEASE_NAME=bjt-${GITHUB_REF/refs\/tags\//}-${{ matrix.job.os-name }}-${{ matrix.job.architecture }}
           tar czvf $RELEASE_NAME.tar.gz $BINARY_NAME
           ########## create sha256 ##########
           if [[ ${{ runner.os }} == 'Windows' ]]; then
@@ -98,12 +96,13 @@ jobs:
           else
             shasum -a 256 $RELEASE_NAME.tar.gz > $RELEASE_NAME.sha256
           fi
+
       - name: Releasing assets
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            target/${{ matrix.job.target }}/release/rust-gh-example-*.tar.gz
-            target/${{ matrix.job.target }}/release/rust-gh-example-*.sha256
+            target/${{ matrix.job.target }}/release/bjt-*.tar.gz
+            target/${{ matrix.job.target }}/release/bjt-*.sha256
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
