--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,8 @@ on:
   push:
     tags:
       - "v[0-9]+.[0-9]+.[0-9]+"
+    branch:
+      - "ci-cd/cross"
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
