--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,11 +26,11 @@ prettytable-rs = "0.8.0"
 itertools = "0.9"
 indoc = "0.3"
 bam = "0.1.1"
+flate2 = "1.0.19"
 
 [dependencies.clap]
 version = "2"
 default-features = true
-features = [ "yaml" ]
 
 [[bin]]
 name = "bjt"
