--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ include = [
 
 [dependencies]
 bam = "0.1"
-chrono = "0.4"
+chrono = { version = "0.4", default-features = false }
 clap = { version = "4", features = ["derive"] }
 clap-verbosity-flag = "1.0.0"
 flate2 = "1"
